# server

./: .env.example  .gitignore  docker-compose.yml
django/: pyproject.toml
django/config/: asgi.py  settings.py  socketio.py  urls.py  wsgi.py
django/guard/: admin.py  models.py  serializers.py  urls.py  views.py
django/guard/migrations/: 0001_initial.py  0002_button_geolocation.py
docker/django/: Dockerfile
docker/nginx/: django.conf
